# airseek

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/core/: dependencies.py  exceptions.py  logging.py  security.py
backend/app/modules/ai/: models.py  router.py  schemas.py  service.py
backend/app/modules/ai/adapters/: base.py  claude.py  deepseek.py  gemini.py  local_llm.py
backend/app/modules/measurements/: models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
backend/app/modules/stations/: models.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/migrations/: env.py
collector/: Dockerfile  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
collector/app/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py  validator.py  writer.py
collector/app/adapters/: __init__.py  base.py  http_sensor.py  iqair.py  openaq.py
collector/app/core/: logging.py
collector/tests/: test_http_sensor_adapter.py  test_openaq_adapter.py  test_schemas.py  test_validator.py
scripts/: init.sql
